--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/((?!assets/|favicon.ico|favicon.png|robots.txt|placeholder.svg).*|.*)",
+      "destination": "/index.html"
+    }
   ]
 }
